# controllers/barber/cont_barber.go
@@ -1,0 +1,265 @@
+package contbarber
+
+import (
+	"context"
+	"fmt"
+	"net/http"
+	ibarbers "nuryanto2121/cukur_in_user/interface/barber"
+	midd "nuryanto2121/cukur_in_user/middleware"
+	"nuryanto2121/cukur_in_user/models"
+	app "nuryanto2121/cukur_in_user/pkg"
+	"nuryanto2121/cukur_in_user/pkg/logging"
+	tool "nuryanto2121/cukur_in_user/pkg/tools"
+	util "nuryanto2121/cukur_in_user/pkg/utils"
+	"strconv"
+
+	"github.com/labstack/echo/v4"
+)
+
+type ContBarber struct {
+	useBarber ibarbers.Usecase
+}
+
+func NewContBarber(e *echo.Echo, a ibarbers.Usecase) {
+	controller := &ContBarber{
+		useBarber: a,
+	}
+
+	r := e.Group("/user/barber")
+	r.Use(midd.JWT)
+	r.GET("/:id", controller.GetDataBy)
+	r.GET("", controller.GetList)
+	r.POST("", controller.Create)
+	r.PUT("/:id", controller.Update)
+	r.DELETE("/:id", controller.Delete)
+}
+
+// GetDataByID :
+// @Summary GetById
+// @Security ApiKeyAuth
+// @Tags Barber
+// @Produce  json
+// @Param OS header string true "OS Device"
+// @Param Version header string true "OS Device"
+// @Param id path string true "ID"
+// @Success 200 {object} tool.ResponseModel
+// @Router /user/barber/{id} [get]
+func (u *ContBarber) GetDataBy(e echo.Context) error {
+	ctx := e.Request().Context()
+	if ctx == nil {
+		ctx = context.Background()
+	}
+
+	var (
+		// logger = logging.Logger{}
+		appE = tool.Res{R: e} // wajib
+		id   = e.Param("id")  //kalo bukan int => 0
+		// valid  validation.Validation                 // wajib
+	)
+	ID, err := strconv.Atoi(id)
+	if err != nil {
+		return appE.Response(http.StatusBadRequest, fmt.Sprintf("%v", err), nil)
+	}
+
+	claims, err := app.GetClaims(e)
+	if err != nil {
+		return appE.Response(http.StatusBadRequest, fmt.Sprintf("%v", err), nil)
+	}
+
+	data, err := u.useBarber.GetDataBy(ctx, claims, ID)
+	if err != nil {
+		return appE.Response(http.StatusInternalServerError, fmt.Sprintf("%v", err), nil)
+	}
+
+	return appE.Response(http.StatusOK, "Ok", data)
+}
+
+// GetList :
+// @Summary GetList Barber
+// @Security ApiKeyAuth
+// @Tags Barber
+// @Produce  json
+// @Param OS header string true "OS Device"
+// @Param Version header string true "OS Device"
+// @Param page query int true "Page"
+// @Param perpage query int true "PerPage"
+// @Param search query string false "Search"
+// @Param initsearch query string false "InitSearch"
+// @Param sortfield query string false "SortField"
+// @Success 200 {object} models.ResponseModelList
+// @Router /user/barber [get]
+func (u *ContBarber) GetList(e echo.Context) error {
+	ctx := e.Request().Context()
+	if ctx == nil {
+		ctx = context.Background()
+	}
+
+	var (
+		// logger = logging.Logger{}
+		appE = tool.Res{R: e} // wajib
+		//valid      validation.Validation // wajib
+		paramquery   = models.ParamList{} // ini untuk list
+		responseList = models.ResponseModelList{}
+		err          error
+	)
+
+	httpCode, errMsg := app.BindAndValid(e, &paramquery)
+	// logger.Info(util.Stringify(paramquery))
+	if httpCode != 200 {
+		return appE.ResponseErrorList(http.StatusBadRequest, errMsg, responseList)
+	}
+	claims, err := app.GetClaims(e)
+	if err != nil {
+		return appE.ResponseErrorList(http.StatusBadRequest, fmt.Sprintf("%v", err), responseList)
+	}
+	// if !claims.IsAdmin {
+	// 	paramquery.InitSearch = " id_created = " + strconv.Itoa(claims.BarberID)
+	// }
+
+	responseList, err = u.useBarber.GetList(ctx, claims, paramquery)
+	if err != nil {
+		// return e.JSON(http.StatusBadRequest, err.Error())
+		return appE.ResponseErrorList(tool.GetStatusCode(err), fmt.Sprintf("%v", err), responseList)
+	}
+
+	// return e.JSON(http.StatusOK, ListBarbersPost)
+	return appE.ResponseList(http.StatusOK, "", responseList)
+}
+
+// CreateSaBarber :
+// @Summary Add Barber
+// @Security ApiKeyAuth
+// @Tags Barber
+// @Produce json
+// @Param OS header string true "OS Device"
+// @Param Version header string true "OS Device"
+// @Param req body models.BarbersPost true "req param #changes are possible to adjust the form of the registration form from frontend"
+// @Success 200 {object} tool.ResponseModel
+// @Router /user/barber [post]
+func (u *ContBarber) Create(e echo.Context) error {
+	ctx := e.Request().Context()
+	if ctx == nil {
+		ctx = context.Background()
+	}
+
+	var (
+		logger = logging.Logger{} // wajib
+		appE   = tool.Res{R: e}   // wajib
+		form   models.BarbersPost
+	)
+
+	// validasi and bind to struct
+	httpCode, errMsg := app.BindAndValid(e, &form)
+	logger.Info(util.Stringify(form))
+	if httpCode != 200 {
+		return appE.ResponseError(http.StatusBadRequest, errMsg, nil)
+	}
+
+	if form.OperationStart.After(form.OperationEnd) {
+		return appE.ResponseError(http.StatusBadRequest, fmt.Sprintf("%v", "Jam buka harus lebih besar dari jam tutup."), nil)
+	}
+	claims, err := app.GetClaims(e)
+	if err != nil {
+		return appE.ResponseError(http.StatusBadRequest, fmt.Sprintf("%v", err), nil)
+	}
+
+	err = u.useBarber.Create(ctx, claims, &form)
+	if err != nil {
+		return appE.ResponseError(tool.GetStatusCode(err), fmt.Sprintf("%v", err), nil)
+	}
+
+	return appE.Response(http.StatusCreated, "Ok", nil)
+}
+
+// UpdateSaBarber :
+// @Summary Rubah Barber
+// @Security ApiKeyAuth
+// @Tags Barber
+// @Produce json
+// @Param OS header string true "OS Device"
+// @Param Version header string true "OS Device"
+// @Param id path string true "ID"
+// @Param req body models.BarbersPost true "req param #changes are possible to adjust the form of the registration form from frontend"
+// @Success 200 {object} tool.ResponseModel
+// @Router /user/barber/{id} [put]
+func (u *ContBarber) Update(e echo.Context) error {
+	ctx := e.Request().Context()
+	if ctx == nil {
+		ctx = context.Background()
+	}
+
+	var (
+		logger = logging.Logger{} // wajib
+		appE   = tool.Res{R: e}   // wajib
+		err    error
+		// valid  validation.Validation                 // wajib
+		id   = e.Param("id") //kalo bukan int => 0
+		form = models.BarbersPost{}
+		// form    models.BarbersPost
+	)
+
+	BarberID, _ := strconv.Atoi(id)
+	// logger.Info(id)
+
+	// validasi and bind to struct
+	httpCode, errMsg := app.BindAndValid(e, &form)
+	logger.Info(util.Stringify(form))
+	if httpCode != 200 {
+		return appE.ResponseError(http.StatusBadRequest, errMsg, nil)
+	}
+	if form.OperationStart.After(form.OperationEnd) {
+		return appE.ResponseError(http.StatusBadRequest, fmt.Sprintf("%v", "Jam buka harus lebih besar dari jam tutup."), nil)
+	}
+
+	claims, err := app.GetClaims(e)
+	if err != nil {
+		return appE.ResponseError(http.StatusBadRequest, fmt.Sprintf("%v", err), nil)
+	}
+
+	// form.UpdatedBy = claims.BarberName
+	err = u.useBarber.Update(ctx, claims, BarberID, form)
+	if err != nil {
+		return appE.ResponseError(tool.GetStatusCode(err), fmt.Sprintf("%v", err), nil)
+	}
+	return appE.Response(http.StatusCreated, "Ok", nil)
+}
+
+// DeleteSaBarber :
+// @Summary Delete Barber
+// @Security ApiKeyAuth
+// @Tags Barber
+// @Produce  json
+// @Param OS header string true "OS Device"
+// @Param Version header string true "OS Device"
+// @Param id path string true "ID"
+// @Success 200 {object} tool.ResponseModel
+// @Router /user/barber/{id} [delete]
+func (u *ContBarber) Delete(e echo.Context) error {
+	ctx := e.Request().Context()
+	if ctx == nil {
+		ctx = context.Background()
+	}
+
+	var (
+		// logger = logging.Logger{}
+		appE = tool.Res{R: e} // wajib
+		id   = e.Param("id")  //kalo bukan int => 0
+		// valid  validation.Validation                 // wajib
+	)
+	ID, err := strconv.Atoi(id)
+	if err != nil {
+		return appE.Response(http.StatusBadRequest, fmt.Sprintf("%v", err), nil)
+	}
+
+	claims, err := app.GetClaims(e)
+	if err != nil {
+		return appE.ResponseError(http.StatusBadRequest, fmt.Sprintf("%v", err), nil)
+	}
+
+	err = u.useBarber.Delete(ctx, claims, ID)
+	if err != nil {
+		return appE.Response(http.StatusInternalServerError, fmt.Sprintf("%v", err), nil)
+	}
+
+	return appE.Response(http.StatusOK, "Ok", nil)
+}
